Update The Dumbing Of America.html

--- a/The Dumbing Of America.html
+++ b/The Dumbing Of America.html
@@ -5,7 +5,7 @@
 <p>  Social media has certainly taken its toll on American children. So many kids base their entire life off of what they see on social media and can't live without it. At this point kids be on twitter past twitter-light… I get it, not funny:(. So many kids grow up wanting to be a streamer(the job of lowest pay) because their hero is a streamer. I regret saying this but, my grandma was right, social media is “brain rot”.</p>
 <p>  Even Our Government thinks we’re stupid. You know those kinder joy candies, they originated in Germany, a toy inside a chocolate egg. When America adopted this idea, they decided that Americans(even adults) were to stupid not to eat the toy along with the egg so they put one side candy, one side toy. Even restaurants have started putting “do not eat the rapper” on hamburger rapers. So remember, if you work at Mcdonalds, don’t eat the rappers!</p>
 <p>  This is the end of this article, that is why it's called the “conclusion paragraph”. Now you know how the dumbing of America started. Now it's time for you to fix it. If you won’t help, that increases the chance of this country going from advanced to unadvanced but living with advanced technology. Anyways see you next essay, by! :)</p>
-<br><a href="">Return</a>
+<br><a href="https://0038509gd.github.io/Gregs-Library/">Return</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
