--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head></head><body style="color:white;">
 <h style="font-size:50px;">The Greg Library</h><br>
-<a href="">The Pink Ping Pong Ball(1)</a><br>
-<a href="">The Pink Ping Pong Ball(2)</a><br>
-<a href="">The Pink Ping Pong Ball(3)</a><br>
-<a href="">The Roug-Bot</a><br>
-<a href="">Daylight Savings Time</a><br>
-<a href="">Junk Food</a><br>
-<a href="">Celular Devices</a><br>
-<a href="">Insane Asylum vs. Middle School</a><br>
-<a href="">The Dumbing Of America</a>
+<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(1).html">The Pink Ping Pong Ball(1)</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(2).html">The Pink Ping Pong Ball(2)</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(3).html">The Pink Ping Pong Ball(3)</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Rouge-Bot.html">The Roug-Bot</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Daylight%20Savings%20Time.html">Daylight Savings Time</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Junk%20Food.html">Junk Food</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Cellular%20Devices.html">Celular Devices</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/Insane%20Asylum%20vs.%20Middle%20School.html">Insane Asylum vs. Middle School</a><br>
+<a href="https://0038509gd.github.io/Gregs-Library/The%20Dumbing%20Of%20America.html">The Dumbing Of America</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
