--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <a href="https://0038509gd.github.io/Gregs-Library/Cellular%20Devices.html">Celular Devices</a><br>
 <a href="https://0038509gd.github.io/Gregs-Library/Insane%20Asylum%20vs.%20Middle%20School.html">Insane Asylum vs. Middle School</a><br>
 <a href="https://0038509gd.github.io/Gregs-Library/The%20Dumbing%20Of%20America.html">The Dumbing Of America</a>
-</body></html><script>
+<audio controls loop autoplay>
+  <source src="Fluffing-a-Duck.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio></body></html><script>
   document.body.style.background = "black";
 </script>
