--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body style="color:white;">
 <h style="font-size:50px;">Welcom To Greg.com!:)</h>
 </body></html><script>
-  
+  document.body.style.background = "black";
 </script>
