--- a/The_Greg_Library/index.html
+++ b/The_Greg_Library/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html><html><head></head><body style="color:white;">
 <h style="font-size:50px;">The Greg Library</h><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(1).html">The Pink Ping Pong Ball(1)</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(2).html">The Pink Ping Pong Ball(2)</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Pink%20Ping%20Pong%20Ball(3).html">The Pink Ping Pong Ball(3)</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Rouge-Bot.html">The Roug-Bot</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Daylight%20Savings%20Time.html">Daylight Savings Time</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Junk%20Food.html">Junk Food</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Cellular%20Devices.html">Celular Devices</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/Insane%20Asylum%20vs.%20Middle%20School.html">Insane Asylum vs. Middle School</a><br>
-<a href="https://0038509gd.github.io/Gregs-Library/The%20Dumbing%20Of%20America.html">The Dumbing Of America</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-1-).html">The Pink Ping Pong Ball(1)</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-2-).html">The Pink Ping Pong Ball(2)</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html">The Pink Ping Pong Ball(3)</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Rouge-Bot.html">The Roug-Bot</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Daylight_Savings_Time.html">Daylight Savings Time</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Junk_Food.html">Junk Food</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Cellular_Devices.html">Celular Devices</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Insane_Asylum-vs-Middle_School.html">Insane Asylum vs. Middle School</a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/The_Dumbing_Of_America.html">The Dumbing Of America</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
