--- a/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html
+++ b/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html
@@ -8,7 +8,7 @@
 <p>  When Cimmidrocken-Hadl-Hadl-Bobington the II turned 21 she had a halfway to 42 party. They had Pink Ping Pong, Ludicrous Lime Lemonade and Perplexing Purple Pancakes. There apparently was a lot of family history regarding these items.</p>
 <p>  When she turned 42 she had gotten married and had 1 kid they named him Bob. he really liked rubber spheres.</p>
 <p>  On her 72nd birthday party her friends and family asked her about the Perplexing Purple Pancakes she was apparently obsessed with. She deflected the question and no later than 2 seconds afterward her son and future daughter in law arrived and she was hit through the head by a misled arrow. She died. Immediately.</p><br>
-<a href="https://0038509gd.github.io/Gregs-Library/">Return</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Return</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
