--- a/The_Greg_Library/Junk_Food.html
+++ b/The_Greg_Library/Junk_Food.html
@@ -6,7 +6,7 @@
 <p>  Welcome to the wonderful world of diabetes. There are 3 ways to get diabetes, have your pancreas surgically removed, be allergic to your own insulin, or have your cells develop a resistance to said insulin. Some symptoms of diabetes could include not having a pancreas, decreased blood flow, easily bruised, etc… You can avoid it by NOT OVEREATING FAT. You jiggly pig!</p>
 <p>  How to avoid becoming a fat mutated humanoid. Buy your own food. Eat a balanced diet. And check ingredients of pre-made food. Please follow at least these tips so i don’t have to deal with humanoids.</p>
 <p>  In conclusion, CHECK the INGREDIENTS! Now that I’m done yelling at you, see you next essay and have a good one, alright?</p><br>
-<a href="https://0038509gd.github.io/Gregs-Library/">Return</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Return</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
