--- a/The_Greg_Library/Daylight_Savings_Time.html
+++ b/The_Greg_Library/Daylight_Savings_Time.html
@@ -6,7 +6,7 @@
 <p>  Who here dislikes(understatement of the millenia) daylight saving time. It makes us go to bed early. If not, it makes us get up early. And from the scientific side it screws with our internal clocks. I say “BOO” to the POINTLESSNESS of daylight saving time!</p>
 <p>  Daylight saving time is like a virus. if one country has it and they interact with another one, the other one will likely adopt the concept. If you have it and the other person doesn't then it is an absolute pain for either person to schedule squat. I feel bad for accountants. I think that we can all agree that daylight saving time is dumb.</p>
 <p>  This is why we need to bug the government about daylight saving time. Anyway, see you next essay, and text your state representative, allright?</p><br>
-<a href="https://0038509gd.github.io/Gregs-Library/">Return</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Return</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
