--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body style="color:white;">
-<h style="font-size:50px;">Welcom To Greg.com!:)</h>
-<a href="">Libary</a>
+<h style="font-size:50px;">Welcom To Greg.com!:)</h><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Libary</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
