--- a/The_Greg_Library/index.html
+++ b/The_Greg_Library/index.html
@@ -8,7 +8,8 @@
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Junk_Food.html">Junk Food</a><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Cellular_Devices.html">Celular Devices</a><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Insane_Asylum-vs-Middle_School.html">Insane Asylum vs. Middle School</a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/The_Dumbing_Of_America.html">The Dumbing Of America</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/The_Dumbing_Of_America.html">The Dumbing Of America</a><br><br>
+<a href="https://0038509gd.github.io/Greg.com/">Home</a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
