--- a/The_Greg_Library/Rouge-Bot.html
+++ b/The_Greg_Library/Rouge-Bot.html
@@ -7,7 +7,7 @@ it exploded, third time it worked!</p>
 <p>  While I was searching my lab for useful stuff, I found: A Machine Nerf Gun, Some Wires, Batteries, 2 Motors and some circuits. I fit them together and made the ion cannon that I was looking for earlier but remembered I didn't have one. It wouldn't work on the rogue-bot but it would work on the other bots. It having the shields ment no ion cannon and no laser blasters. Only solid ammunition.</p>
 <p>  The arrows weren't working very well but they did a little bit (They mostly just bounced off). The ion cannon only fired once. The rogue-bot took a while to find me and when it did, I turned to run for it. I tripped and accidentally pressed a few buttons on my watch and then, boom. It exploded, I had completely forgotten about the self-destruct button I had programmed into the original design at the very beginning.</p>
 <p>  “Ever since this happened I never made another device without a self-destruct activation of some kind or with AGI. It was hard to attack the robot I once thought of as my son. It hurt, a lot. But it had to be done. Ok, now kids, LEAVE ME ALONE, and GET OUT.”<br>“Kids these days, always asking about my robots and how holographic homework works so that they can destroy it. Uuuugh, it's exhausting. That's why I never had kids.”</p><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Return</a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
