--- a/The_Greg_Library/Insane_Asylum-vs-Middle_School.html
+++ b/The_Greg_Library/Insane_Asylum-vs-Middle_School.html
@@ -9,7 +9,7 @@
 <p>  At the asylum they don't make you ask to go “drop the kids off at the pool”. This has many positive results for example, less moist undies. Or in other cases less gravy pants. They are also not legally allowed to lock any bathrooms unless it is being remodeled or in use(unlike middle schools apparently). If you think someone is nuts would you expect them to ask to go before the restroom?</p>
 <p>  If you choose to actually attempt at living in an insane asylum, you would be giving some things up. If I had to go a day without my little brother I’d be fine, but if it's more than a week I'd go nuts(the point is “so would you”). And there is no WIFI or cell service. At least you don't have to deal with parents or siblings.</p>
 <p>  Well, reader? What  did you think? Is an insane asylum a better learning environment than middle school, or not? Let me know in the comments! Anyways, C-ya!</p>
-<br><a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/">Return</a>
+<br><a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
