--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><head><style>
+.button {
+  border: 32px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+</style></head><body style="color:white;">
 <h style="font-size:50px;">Welcom To Greg.com!:)</h><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Libary</button></a>
 </body></html><script>
