--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html><head><style>
 .button {
   border: 32px;
-  color: white;
+  color: black;
   padding: 15px 32px;
   text-align: center;
-  text-decoration: none;
+  text-decoration: black;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
