--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html><head><style>
 .button {
   border: 32px;
-  color: black;
+  color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: black;
