--- a/index.html
+++ b/index.html
@@ -1,16 +1,4 @@
-<!DOCTYPE html><html><head><style>
-.button {
-  border: 32px;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: black;
-  display: inline-block;
-  font-size: 50px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
-</style></head><body style="color:white;">
+<!DOCTYPE html><html><body style="color:white;">
 <h style="font-size:50px;">Welcom To Greg.com!:)</h><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Libary</button></a>
 </body></html><script>
