--- a/The_Greg_Library/index.html
+++ b/The_Greg_Library/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><head></head><body style="color:white;">
 <h style="font-size:50px;">The Greg Library</h><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-1-).html"><button type="button">The Pink Ping Pong Ball(1)</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-2-).html"><button type="button">The Pink Ping Pong Ball(2)</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html"><button type="button">The Pink Ping Pong Ball(3)</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Rouge-Bot.html"><button type="button">The Roug-Bot</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Daylight_Savings_Time.html"><button type="button">Daylight Savings Time</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Junk_Food.html"><button type="button">Junk Food</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Cellular_Devices.html"><button type="button">Celular Devices</button></a><br>
-<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Insane_Asylum-vs-Middle_School.html"><button type="button">Insane Asylum vs. Middle School</button></a><br>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-1-).html"><button type="button">The Pink Ping Pong Ball(1)</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-2-).html"><button type="button">The Pink Ping Pong Ball(2)</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html"><button type="button">The Pink Ping Pong Ball(3)</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Rouge-Bot.html"><button type="button">The Roug-Bot</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Daylight_Savings_Time.html"><button type="button">Daylight Savings Time</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Junk_Food.html"><button type="button">Junk Food</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Cellular_Devices.html"><button type="button">Celular Devices</button></a>
+<a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Insane_Asylum-vs-Middle_School.html"><button type="button">Insane Asylum vs. Middle School</button></a>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/The_Dumbing_Of_America.html"><button type="button">The Dumbing Of America</button></a><br><br>
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Home</button></a>
 </body></html><script>
