--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><html><body style="color:white;">
 <h style="font-size:50px;">Welcom To Greg.com!:)</h><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Libary</button></a>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/"><button type="button">Gregary Games</button></a>
 </body></html><script>
   document.body.style.background = "black";
 </script>
