--- a/Gregames/index.html
+++ b/Gregames/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body style="color:white;">
 <h style="font-size:50px;">Gregary Games</h><br><br>
-<br><br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/FishvBat.js"><button type="button">Fish-vs-Bat</button></a><br><br>
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Return</button></a>
 </body></html><script>
   document.body.style.background = "black";
