--- a/Gregames/OregonTrail/Test-Names.html
+++ b/Gregames/OregonTrail/Test-Names.html
@@ -8,6 +8,11 @@ What_Are_The_First_Names_Of_The_Wagon_Leaders_3_Kids?<br>
 <input type="text" id="2" value="Gordy"><br>
 <input type="text" id="3" Value="Derik"><br>
 Are_These_Names_Correct?<button type="button" onclick="names()">Y</button><br><br>
+<p id="I">is your name</p>
+<p id="W">is your wifes name</p>
+<p id="K1">is kid 1s name</p>
+<p id="K2">is kid 2s name</p>
+<p id="K3">is kid 3s name</p>
 <script>
 function names() {
   var I = document.getElementById("You").value;
