--- a/Gregames/OregonTrail/Test-Names.html
+++ b/Gregames/OregonTrail/Test-Names.html
@@ -22,7 +22,7 @@ function names() {
   var K1 = document.getElementById("1").value;
   document.getElementById("K1").innerHTML = K1;
   var K2 = document.getElementById("K2").value;
-  document.getElementById("2").innerHTML = K2;
+  document.getElementById("K2").innerHTML = K2;
   var K3 = document.getElementById("3").value;
   document.getElementById("K3").innerHTML = K3;
 }
