--- a/Gregames/OregonTrail/Jobs-Explained.html
+++ b/Gregames/OregonTrail/Jobs-Explained.html
@@ -3,4 +3,6 @@ Banker_From_Boston=$1600<br>
 Carpenter_From_Ohio=$800,x2score<br>
 Farmer_From_Illinois=$400,x3score<br>
 Poverty_From_Kentucky=$5,2-Oxen,10lb-Of-Food,5-Sets-Of-Clothing,15-Boxes(20)-Of-Amunition,3-Randum-Spare-Parts<br>
-Press_"Space"_To_Contine<a href="https://0038509gd.githb.io/Greg.com/Gregames/OregonTrail/"><button type="button">Space</button></a></body></html>
+Press_"Space"_To_Contine<a href="https://0038509gd.githb.io/Greg.com/Gregames/OregonTrail/"><button type="button">Space</button></a></body><script>
+  document.body.style.background = "black";
+</script></html>
