--- a/Gregames/OregonTrail/Test-Names.html
+++ b/Gregames/OregonTrail/Test-Names.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:white;">
+<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;">
 What_Is_The_First_Name_Of_The_Wagon_Leader?<br>
 <input type="text" id="You" value="Greg"><br>
 What_Is_The_First_Name_Of_The_Wagon_Leaders_Wife?<br>
@@ -26,6 +26,6 @@ function names() {
   var K3 = document.getElementById("3").value;
   document.getElementById("K3").innerHTML = K3;
 }
-</script></body1><script>
+</script></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
