--- a/Gregames/OregonTrail/Test-Jobs.html
+++ b/Gregames/OregonTrail/Test-Jobs.html
@@ -8,15 +8,26 @@
 <script>
 function Poverty() {
   document.getElementById("job").innerHTML = 4;
+  let money = 5.00
+  let Oxen = 2
+  let Foodlb = 10
+  let Clothes = 5
+  let Amo = 15*20
+  let Axels = 1
+  let Toungs = 1
+  let Wheels = 1
 }
 function Farmer() {
   document.getElementById("job").innerHTML = 3;
+  let money = 400.00
 }
 function Carpenter() {
   document.getElementById("job").innerHTML = 2;
+  let money = 800.00
 }
 function Banker() {
   document.getElementById("job").innerHTML = 1;
+  let money = 1600.00
 }
 </script></body4></body3></html><script>
   document.body.style.background = "black";
