--- a/Gregames/OregonTrail/Test-Jobs.html
+++ b/Gregames/OregonTrail/Test-Jobs.html
@@ -8,7 +8,7 @@
 <script>
 function Poverty() {
   document.getElementById("job").innerHTML = 4;
-  let money = 5.00
+  let imoney = 5.00
   let Oxen = 2
   let Foodlb = 10
   let Clothes = 5
@@ -19,15 +19,15 @@ function Poverty() {
 }
 function Farmer() {
   document.getElementById("job").innerHTML = 3;
-  let money = 400.00
+  let imoney = 400.00
 }
 function Carpenter() {
   document.getElementById("job").innerHTML = 2;
-  let money = 800.00
+  let imoney = 800.00
 }
 function Banker() {
   document.getElementById("job").innerHTML = 1;
-  let money = 1600.00
+  let imoney = 1600.00
 }
 </script></body4></body3></html><script>
   document.body.style.background = "black";
