--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<script>
+var I = (your name)
+var W = (your wifs name)
+var K1 = (first kids name)
+var K2 = (seconed kids name)
+var K3 = (third kids name)
+var job = (Banker,Carpenter,Farmer,Poverty)
+var imoney = ($1600,$800,$400,$5)
+var money = ([num}cash)
+var Oxen = ([num}ox)
+var Foodlb = (([num}food)lb)
+var Clothing = ([num}sets-clothing)
+var Amo = ([num}amunition)
+var Axel = {([num}axel}spare-part)
+var Toung = {([num}toung}spare-part)
+var Wheel = {([num}wheel}spare-part)
+var Date = ([1-31}[January,February,March,April,May,June,July,August, September,October,November,December}[1848<=})
+var Wheather = (hot,warm,raining,cool,cold,snowing,very-cold)
+var Health = (good,fair,poor,very-poor)
+var milesl = ([num}miles-next-landmark)
+var milesd = ([num}total-miles)
+var Pace = (steady,tiring,strenguous,grueling)
+var H = ([8,12,16,20}hrs-per-day)
+var Rations = (filling,meager,bare-bones)
+var FPD = ([3,2,1}lb-food-per-day)
+</script>
