--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <script>
-var I = (your name)
-var W = (your wifs name)
-var K1 = (first kids name)
-var K2 = (seconed kids name)
-var K3 = (third kids name)
-var job = (Banker,Carpenter,Farmer,Poverty)
-var imoney = ($1600,$800,$400,$5)
-var money = ([num}cash)
-var Oxen = ([num}ox)
-var Foodlb = (([num}food)lb)
-var Clothing = ([num}sets-clothing)
-var Amo = ([num}amunition)
-var Axel = {([num}axel}spare-part)
-var Toung = {([num}toung}spare-part)
-var Wheel = {([num}wheel}spare-part)
-var Date = ([1-31}[January,February,March,April,May,June,July,August, September,October,November,December}[1848<=})
-var Wheather = (hot,warm,raining,cool,cold,snowing,very-cold)
-var Health = (good,fair,poor,very-poor)
-var milesl = ([num}miles-next-landmark)
-var milesd = ([num}total-miles)
-var Pace = (steady,tiring,strenguous,grueling)
-var H = ([8,12,16,20}hrs-per-day)
-var Rations = (filling,meager,bare-bones)
-var FPD = ([3,2,1}lb-food-per-day)
+var I = (your name);
+  document.getElementById('youName').innerHTML = I;
+var W = (your wifs name);
+  document.getElementById('wifeName').innerHTML = W;
+var K1 = (first kids name);
+  ducumant.getElementById('kid1Name').innerHTML = K1;
+var K2 = (seconed kids name);
+  document.getElementById('kid2Name').innerHTML = K2;
+var K3 = (third kids name);
+  document.getElementById('kid3Name').innerHTML = K3;
+var job = (Banker,Carpenter,Farmer,Poverty);
+  document.getElementById('job').innerHTML = job
+var money = ([num}cash);
+  document.getElementById('money').innerHTML = money;
+var Oxen = ([num}ox);
+  document.getElementById('Oxen').innerHTML = Oxen;
+var Foodlb = (([num}food)lb);
+  document.getElementById('Foodlb').innerHTML = Foodlb;
+var Clothing = ([num}sets-clothing);
+  document.getElementById('Clothing').innerHTML = Clothing;
+var Amo = ([num}amunition);
+  document.getElementById('Amo').innerHTML = Amo;
+var Axel = {([num}axel}spare-part);
+  document.getElementById('Axel').innerHTML = Axel;
+var Toungue = {([num}toung}spare-part);
+  document.getElementById('Tongue').innerHTML = Toungue;
+var Wheel = {([num}wheel}spare-part);
+  document.getElementById('Wheel').innerHTML = Wheel;
+var Day = (1-31/1-30/1-28);
+  document.getElementById('Day').innerHTML = Day;
+var Month = (January,February,March,April,May,June,July,August,September,October,November,December);
+  document.getElementById('Month').innerHTML = Month;
+var Year = (=>1848);
+  document.getElementById('Year').innerHTML = Year;
+var Wheather = (hot,warm,raining,cool,cold,snowing,very-cold);
+  document.getElementById('Wheather').innerHTML = Wheather;
+var Health = (good,fair,poor,very-poor);
+  document.getElementById('Health').innerHTML = Health;
+var milesL = ([num}miles-next-landmark);
+  document.getElementById('milesL').innerHTML = milesL;
+var milesD = ([num}total-miles);
+  document.getElementById('milesD').innerHTML = milesD;
+var Pace = (steady,tiring,strenguous,grueling);
+  document.getElementById('Pace').innerHTML = Pace;
+var hr = ([8,12,16,20}hrs-per-day);
+  document.getElementById('hr').innerHTML = hr;
+var Rations = (filling,meager,bare-bones);
+  document.getElementById('Rations').innerHTML = Rations;
+var FPD = ([3,2,1}lb-food-per-day);
+  document.getElementById('FPD').innerHTML = FPD;
 </script>
