--- a/Gregames/OregonTrail/Test-Jobs.html
+++ b/Gregames/OregonTrail/Test-Jobs.html
@@ -8,26 +8,30 @@
 <script>
 function Poverty() {
   document.getElementById("job").innerHTML = 4;
-  let imoney = 5.00
-  let Oxen = 2
-  let Foodlb = 10
-  let Clothes = 5
-  let Amo = 15*20
-  let Axels = 1
-  let Toungs = 1
-  let Wheels = 1
+  var money = 5.00
+  var Oxen = 2
+  var Foodlb = 10
+  var Clothing = 5
+  var Amo = 15*20
+  var Axel = 1
+  var Toungue = 1
+  var Wheel = 1
+  var job = 4
 }
 function Farmer() {
   document.getElementById("job").innerHTML = 3;
-  let imoney = 400.00
+  var money = 400.00
+  var job = 3
 }
 function Carpenter() {
   document.getElementById("job").innerHTML = 2;
-  let imoney = 800.00
+  var money = 800.00
+  var job = 2
 }
 function Banker() {
   document.getElementById("job").innerHTML = 1;
-  let imoney = 1600.00
+  var money = 1600.00
+  var job = 1
 }
 </script></body4></body3></html><script>
   document.body.style.background = "black";
