--- a/Gregames/OregonTrail/Test-Jobs.html
+++ b/Gregames/OregonTrail/Test-Jobs.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><html><body3 style="color:white"><body4 style="font-size:25px;">
-<button onclick="Banker();">1</button>	Banker_From_Boston<br>
-<button onclick="Carpenter();">2</button>	Carpenter_From_Ohio<br>
-<button onclick="Farmer();">3</button>	Farmer_From_Illinois<br>
-<button onclick="Poverty();">4</button>	Poverty_From_Kentcky<br>
-<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Jobs-Explained.html"><button>5</button></a>	Find_Out_The_Difference_Between_These_Options
+<button onclick="Banker();">1</button> Banker_From_Boston<br>
+<button onclick="Carpenter();">2</button> Carpenter_From_Ohio<br>
+<button onclick="Farmer();">3</button> Farmer_From_Illinois<br>
+<button onclick="Poverty();">4</button> Poverty_From_Kentcky<br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Jobs-Explained.html"><button>5</button></a> Find_Out_The_Difference_Between_These_Options
 <p id="job"></p>
 <script>
 function Poverty() {
-  document.getElementById("job").innerHTML = 4;
+  document.getElementById("job").innerHTML = "Poverty";
   var money = 5.00
   var Oxen = 2
   var Foodlb = 10
@@ -19,17 +19,17 @@ function Poverty() {
   var job = 4
 }
 function Farmer() {
-  document.getElementById("job").innerHTML = 3;
+  document.getElementById("job").innerHTML = "Farmer";
   var money = 400.00
   var job = 3
 }
 function Carpenter() {
-  document.getElementById("job").innerHTML = 2;
+  document.getElementById("job").innerHTML = "Carpenter";
   var money = 800.00
   var job = 2
 }
 function Banker() {
-  document.getElementById("job").innerHTML = 1;
+  document.getElementById("job").innerHTML = "Banker";
   var money = 1600.00
   var job = 1
 }
