--- a/Gregames/OregonTrail/Test-Shop.html
+++ b/Gregames/OregonTrail/Test-Shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body5 style="color:white"><body6 style="font-size:25px">
-<body7 popover id="Ox"><button onclick="buyOx();" popovertarget="Ox" popovertargetaction="hide">1</button> Oxen</body7><br>
+<body7 popover id="Ox"><button onclick="buyOx();">1</button> Oxen</body7><br>
 <button onclick="buyFood();">2</button> Foodlb<br>
 <button onclick="buyClothing();">3</button> Clothes<br>
 <button onclick="buyAmo();">4</button> Boxes_Of_Amo(20per-box)<br>
