--- a/Gregames/OregonTrail/Segment-Names.html
+++ b/Gregames/OregonTrail/Segment-Names.html
@@ -7,7 +7,7 @@ What_Are_The_First_Names_Of_The_Wagon_Leaders_3_Kids?<br>
 <input type="text" id="1" value="Greg.jr" onkeydown="kid1(event)"><br>
 <input type="text" id="2" value="Gordy" onkeydown="kid2(event)"><br>
 <input type="text" id="3" Value="Derik" onkeydown="kid3(event)"><br>
-Are_These_Names_Correct?<button type="button" onclick="done">Y</button><br><br>
+Are_These_Names_Correct?<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Jobs"><button type="button">Y</button></a><br><br>
 <p id="I">is your name</p>
 <p id="W">is your wifes name</p>
 <p id="K1">is kid 1s name</p>
