--- a/Gregames/OregonTrail/Culking-Your-Wagon-Explained.html
+++ b/Gregames/OregonTrail/Culking-Your-Wagon-Explained.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;"><u>Culking_Your_Wagon</u><br>Culking_Your_Wagon_Is_To_Seal_The_Bottom_Of_Your_Wagon_So_That_No_Water_Can_Get_In_And_Use_It_Like_a_Boat_To_Get_Across_The_Body_Of_Water<br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Taking-A-Fairy-Explained.html"><button>Space</button></a></body2></body1><script>
+<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;"><u>Culking_Your_Wagon</u><br>Culking_Your_Wagon_Is_To_Seal_The_Bottom_Of_Your_Wagon_So_That_No_Water_Can_Get_In_And_Use_It_Like_a_Boat_To_Get_Across_The_Body_Of_Water<br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Taking-A-Fairy-Explained"><button>Space</button></a></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
