--- a/Gregames/OregonTrail/Taking-A-Fairy-Explained.html
+++ b/Gregames/OregonTrail/Taking-A-Fairy-Explained.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;"><u>Taking_A_Fairy</u><br>Inorder_To_Take_A_Fairy_You_Must_Whait_Untill_The_Fairy_Is_Available_And_Then_Pay_The_Fairy_Man_To_Take_Your_Wagon_Across<br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Hiring-An-Indian-Guide-Explained.html"><button>Space</button></a></body2></body1><script>
+<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;"><u>Taking_A_Fairy</u><br>Inorder_To_Take_A_Fairy_You_Must_Whait_Untill_The_Fairy_Is_Available_And_Then_Pay_The_Fairy_Man_To_Take_Your_Wagon_Across<br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Hiring-An-Indian-Guide-Explained"><button>Space</button></a></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
